tests/ui/consts/issue-73976-monomorphic.stderr
error[E0015]: cannot call non-const operator in constant functions
  --> $DIR/issue-73976-monomorphic.rs:21:5
   |
LL |     GetTypeId::<T>::VALUE == GetTypeId::<usize>::VALUE
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/any.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
